--- a/site/estilos/style.css
+++ b/site/estilos/style.css
@@ -63,8 +63,22 @@ menu > ul > li > a:hover{
 }
 
 main {
+    position: relative;
     width: 100vw;
-    height: 74.1vh;
+    height: 463px;
+    margin: auto;
     background-image: url(../imagens/banner-mobile.jpg);
     background-size: cover;
 }
+
+main > h1 {
+    position: absolute;
+    top: 90px;
+    left: 49px;
+    font-size: 3em;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.623);
+    padding: 15px;
+
+}
+
