--- a/site/estilos/style.css
+++ b/site/estilos/style.css
@@ -9,13 +9,12 @@
 }
 
 header {
-    background-color: #0656e0;
+    background-color: #02122c;
 }
 
 img#logo {
     position: relative;
     padding: 20px;
-   
     left: 50%;
     transform: translate(-50%, 4%);
     width: 200px;
@@ -74,11 +73,29 @@ main {
 main > h1 {
     position: absolute;
     top: 90px;
-    left: 49px;
+    left: 40px;
     font-size: 3em;
     color: white;
     background-color: rgba(0, 0, 0, 0.623);
     padding: 15px;
 
+}
+
+main > p > a {
+    position: absolute;
+    top: 350px;
+    left: 50%;
+    transform: translate(-50%);
+    color: white;
+    background-color: black;
+    padding: 10px;
+    box-shadow: 0px 0px 10px white;
+    border-radius: 10px;
+    font-size: 1.2em;
+    text-decoration: none;
+}
+
+main > p > a:hover {
+    background-image: linear-gradient(#FD8932, #ffae00);
 }
 
